--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,13 +1,35 @@
 version: '3.3'
+
 services:
+  db:
+    image: postgres:13.0-alpine
+    volumes:
+      - /var/lib/postgresql/data/
+    env_file:
+      - ./.env
+
+  backend:
+    build: ../backend/
+    # image: filengun/backend:latest
+    restart: always
+    volumes:
+      - static_value:/app/static/
+      - media_value:/app/media/
+    depends_on:
+      - db
+    env_file:
+      - .env
 
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    # image: filengun/frontend:latest
+    build: ../frontend/
+      # context: ../frontend/
+      # dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
+
   nginx:
+    # image: nginx:1.21.3-alpine
     image: nginx:1.19.3
     ports:
       - "80:80"
@@ -15,3 +37,13 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
+
+    depends_on:
+      - backend
+      - frontend
+
+volumes:
+  static_value:
+  media_value:
