--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         python-version: 3.7
 
-    - name: Install dependencies
+    - name: Install flake8
       run: | 
         python -m pip install --upgrade pip 
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
@@ -40,7 +40,7 @@ jobs:
       - name: Push to Docker Hub backend
         uses: docker/build-push-action@v2
         with:
-          context: ./backend
+          context: ./backend/
           push: true
           tags: filengun/backend:latest
 
