back is two stage 1.8

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,7 @@ jobs:
         script: |
           cd infra/
           sudo docker pull filengun/backend:latest
-          sudo docker pull filengun/filengun:latest
+          sudo docker pull filengun/frontend:latest
           sudo docker-compose stop
           sudo docker-compose rm backend
           touch .env
